# ShadowAuth-ZK

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
circuits/scripts/: compile_circuit.sh  generate_witness.sh  trusted_setup.sh
circuits/src/: MerkleTreeInclusionProof.circom  ShadowAuth.circom
docs/: GITHUB_ISSUES.md
src/client/: prover.py
src/common/: constants.py
src/crypto/: key_manager.py  merkle_tree.py  poseidon_node.js  poseidon_wrapper.py
src/server/: verifier.py
tests/: conftest.py
tests/circuits/: test_circuit.js
tests/unit/: test_merkle_tree.py  test_prover_verifier.py
